# dcmntr

./: CHANGELOG.md  README.md  pyproject.toml
src/dcmntr/: basic_layout.py  core.py  font.py  helpers.py  images.py  layout_query.py  paging.py  render.py  text.py
tests/images/: test_images.py
tests/kitchen_sink/: style.py  test_kitchen_sink.py
tests/paging/: test_basic_layout_paging.py  test_paging_structure.py
