[project]
name = "dcmntr"
version = "0.1.0"
authors = [
  { name="Alexander Neganov", email="ikkeps@gmail.com" },
]
description = "Pure python document layout library"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Graphics :: Presentation",
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.2",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/ikkeps/dcmntr"
Issues = "https://github.com/ikkeps/dcmntr/issues"

# Dev setup

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-image-snapshot[pixelmatch]>=0.4.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dcmntr"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
